--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Lara Businaro's Portfolio</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/lbusinaro/portfolio/raw/main/portfolio.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/lbusinaro/lbusinaro.github.io/portfolio.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
